@@ -385,6 +385,12 @@ class Operations:
                                             found_rating = _ratings[_id]
                                         else:
                                             raise Failed
+                                    elif str(option).startswith("plex"):
+                                        ratings = self.library.get_ratings(item)
+                                        try:
+                                            found_rating = ratings[option] # noqa
+                                        except KeyError:
+                                            found_rating = None
                                     elif str(option).startswith("omdb"):
                                         omdb_item = omdb_obj()
                                         if option == "omdb":
@@ -911,6 +917,12 @@ class Operations:
                                             except Failed:
                                                 tmdb_item = None
                                             found_rating = None
+                                            if option.startswith("plex"):
+                                                ratings = self.library.get_ratings(ep)
+                                                try:
+                                                    found_rating = ratings[option]  # noqa
+                                                except KeyError:
+                                                    found_rating = None
                                             if tmdb_item and option == "tmdb":
                                                 try:
                                                     found_rating = self.config.TMDb.get_episode(tmdb_item.tmdb_id, ep.seasonNumber, ep.episodeNumber).vote_average  # noqa
