@@ -24,6 +24,7 @@ Add `date` option for schedules
 Add `trakt`, `omdb_metascore`, `omdb_tomatoes` ratings sources for mass operations.
 Add `trakt` ratings source for mass episode operations.
 Added GitHub token validation during config validation.
+add `plex` ratings source for mass operations.
 
 # Docs
 Added "getting started" page
